Fix image overflow

--- a/assets/css/base/baseline.scss
+++ b/assets/css/base/baseline.scss
@@ -5,3 +5,7 @@
 .overflow-hidden {
   overflow-y: hidden;
 }
+.wp-block-image > img {
+  max-width: 100%;
+  height: auto;
+}
